--- a/README.org
+++ b/README.org
@@ -2,9 +2,8 @@
 
 Common Lisp implementation of Google's Closure Templates.
 
-|---------+-------------------------------------------|
-| source  | git:https://github.com/archimag/cl-closure-template.git   |
-| commit  | f1983aa  |
-| systems | cl-closure-template |
-|---------+-------------------------------------------|
-
+|---------+---------------------------------------------------------|
+| source  | git:https://github.com/archimag/cl-closure-template.git |
+| commit  | f1983aa                                                 |
+| systems | (closure-template)                                      |
+|---------+---------------------------------------------------------|
